<resources>
    <string name="app_name">UserToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">Task Name</string>
    <string name="deletes_a_task">Deletes a task</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="enter_task_priority">Enter task priority</string>
    <string name="save_task">Save Task</string>
    <string name="task_description">Task Description</string>
    <string name="task_priority">Task priority</string>
    <string name="ok">ok</string>

</resources>